Use SparkUtils safeCol in SparkDataset